Add Signature to messages
This adds a custom signature option to Mms app,
which appends a custom string set in settings
to all messages send.

PS2 : Fix Test Derp

Credits: DroidJunk

Change-Id: I2b3572e47a183c18c70bf8ef4960d60695ac3c4b

Conflicts:
	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/ui/MessagingPreferenceActivity.java

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -235,5 +235,13 @@
             android:title="@string/pref_title_input_type"
             android:entries="@array/pref_entries_input_type"
             android:entryValues="@array/pref_values_input_type" />
+
+        <EditTextPreference
+            android:key="pref_msg_signature"
+            android:title="@string/msg_sig_title"
+            android:summary="@string/msg_sig_summary"
+            android:dialogTitle="@string/msg_sig_title"
+            android:hint="@string/msg_sig_enter_text"
+            android:defaultValue="" />
     </PreferenceCategory>
 </PreferenceScreen>
