--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -204,8 +204,8 @@
             android:title="@string/pref_title_template_gestures_sensitivity" />
     </PreferenceCategory>
 
-    <!-- Extra Settings -->
-    <PreferenceCategory android:title="@string/pref_extra_settings">
+    <!-- Char Settings -->
+    <PreferenceCategory android:title="@string/pref_char_settings">
         <CheckBoxPreference
             android:key="pref_key_strip_unicode"
             android:title="@string/pref_title_strip_unicode"
@@ -229,7 +229,16 @@
             android:title="@string/pref_title_mms_use_sent_timestamp"
             android:summary="@string/pref_summary_mms_use_sent_timestamp"
             android:defaultValue="false" />
+    </PreferenceCategory>
 
+    <!-- Extra Settings -->
+    <PreferenceCategory android:title="@string/pref_extra_settings">		
+        <CheckBoxPreference
+            android:key="pref_hide_avatar"
+            android:title="@string/hide_avatar"
+            android:summary="@string/hide_avatar_summary"
+            android:defaultValue="false" />
+			
         <ListPreference
             android:key="pref_key_mms_input_type"
             android:title="@string/pref_title_input_type"
