--- a/res/layout-inverted/quickmessage_content_light.xml
+++ b/res/layout-inverted/quickmessage_content_light.xml
@@ -83,8 +83,8 @@
         android:layout_weight="1"
         android:fillViewport="true"
         android:minHeight="72dp"
-        android:background="@color/quickmessage_body_dark_bg"
         android:paddingTop="4dp"
+        android:background="@color/quickmessage_body_light_bg"
         android:paddingBottom="4dp" >
 
         <TextView
@@ -98,8 +98,8 @@
             android:paddingRight="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="16sp"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textColorLink="?android:attr/textColorPrimary" />
+            android:textColor="@android:color/white"
+            android:textColorLink="@android:color/secondary_text_light" />
     </ScrollView>
 
     <!-- 'Tap to reply' editor, character counter and send button -->
@@ -108,7 +108,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/quickmessage_body_dark_bg"
+        android:background="@color/quickmessage_body_light_bg"
         android:paddingTop="4dp"
         android:paddingLeft="6dp"
         android:paddingBottom="2dp" >
@@ -137,8 +137,8 @@
             android:nextFocusRight="@+id/send_button"
             android:hint="@string/type_to_reply_text_enter_to_send"
             android:minHeight="@dimen/input_text_height"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textColorHint="?android:attr/textColorTertiary"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/secondary_text_light"
             android:textCursorDrawable = "@null"
             android:maxLines="3"
             android:imeOptions="actionSend|flagNoEnterAction"
@@ -157,7 +157,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal|bottom"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="?android:attr/textColorTertiary"
+                android:textColor="@android:color/secondary_text_light"
                 android:paddingLeft="3dip"
                 android:paddingRight="3dip"
                 android:paddingBottom="4dip"
@@ -166,7 +166,7 @@
             <ImageButton
                 android:id="@+id/send_button_sms"
                 style="?android:attr/borderlessButtonStyle"
-                android:src="@drawable/send_button_selector_dark"
+                android:src="@drawable/send_button_selector"
                 android:drawablePadding="0dip"
                 android:layout_width="wrap_content"
                 android:layout_height="0dip"
