--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -253,4 +253,18 @@
             android:hint="@string/msg_sig_enter_text"
             android:defaultValue="" />
     </PreferenceCategory>
+
+    <!-- Blacklist settings -->
+    <PreferenceCategory android:title="@string/blacklist_title">
+        <PreferenceScreen
+            android:key="button_blacklist"
+            android:title="@string/blacklist_title"
+            android:persistent="false">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.mms"
+                android:targetClass="com.android.mms.BlacklistSetting" />
+        </PreferenceScreen>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
