--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -80,7 +80,7 @@
         android:key="pref_key_mms_settings">
 
         <CheckBoxPreference 
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="pref_key_mms_group_mms"
             android:summary="@string/pref_summary_mms_group_mms"
             android:title="@string/pref_title_mms_group_mms" />
