Separate Multi-part SMS setting from size
This does the foll.:

- Separates the toggle from the size (makes more sense)
- Defaults to true, so users find no diff in behavior
- Default convert value for MMS to 7
  (I would suggest that the sprint devices set it via overlay to -1)
- Generalize numberpicker dialog message

Change-Id: I5b6fb33c3cc56a4078d0170a080ccee840afdbf1

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -80,10 +80,16 @@
             android:summary="@string/pref_summary_sms_split"
             android:title="@string/pref_title_sms_split" />
 
-        <Preference
+        <CheckBoxPreference
+            android:defaultValue="true"
             android:key="pref_key_sms_multi_part"
-            android:persistent="false"
+            android:summary="@string/pref_summary_sms_multi_part"
             android:title="@string/pref_title_sms_multi_part" />
+
+        <Preference
+            android:key="pref_key_sms_multi_part_size"
+            android:persistent="false"
+            android:title="@string/pref_title_sms_multi_part_size" />
     </PreferenceCategory>
 
     <!-- MMS Settings -->
