Fix: avoid FC for dirty flasher
due to a boolean/int change dirtyflashe will get massive
fc on settings. Rename used value to avoid this problem

cheers

Change-Id: I0cc6597387b2773957d3986e7f1524b6afb31439

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -82,7 +82,7 @@
 
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="pref_key_sms_multi_part"
+            android:key="pref_key_sms_multi_part_enabled"
             android:summary="@string/pref_summary_sms_multi_part"
             android:title="@string/pref_title_sms_multi_part" />
 
